--- a/config/database.yml
+++ b/config/database.yml
@@ -5,18 +5,24 @@
 #   gem 'sqlite3'
 #
 default: &default
+
   adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
+  database: rainforest_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  database: rainforest_test
+
 
 production:
   <<: *default
+  database: rainforest_production
+
